2008-11-18  Jorn Baayen  <jorn.baayen@collabora.co.uk>

	* configure.ac:

	Depend on glib 2.18.

	* libgssdp/gssdp-client.c (gssdp_client_set_property):

	Use g_set_error_literal().

2008-11-06  Jussi Kukkonen  <jku@linux.intel.com>

	* doc/gssdp-sections.txt:
	* libgssdp/gssdp-client.c (gssdp_client_new):
	* libgssdp/gssdp-client.h (gssdp_client_new):
	* libgssdp/gssdp-error.c (gssdp_error_quark):
	* libgssdp/gssdp-resource-group.c (gssdp_resource_group_get_client):

	Documentation fixes

2008-11-06  Jussi Kukkonen  <jku@linux.intel.com>

	* libgssdp/gssdp-resource-group.c:

	Only send one SSDP message per X milliseconds (X == 20 by default)

2008-11-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* AUTHORS:
	* tools/gssdp-device-sniffer.c:
	* tools/gssdp-device-sniffer.glade:

	Replace my non-working "@gstreamer.net" email with "@gnome.org" one.

2008-10-29  Jussi Kukkonen  <jku@linux.intel.com>

	* libgssdp/gssdp-resource-group.c (resource_alive):

	send ssdp:byebye before sending the first ssdp:alive.

2008-10-27  Ross Burton  <ross@linux.intel.com>

	* NEWS:
	* configure.ac:
	Version 0.6.3.

2008-10-27  Ross Burton  <ross@linux.intel.com>

	* doc/Makefile.am:
	Add version.xml to content_files so building docs in distcheck works.

2008-10-27  Ross Burton  <ross@linux.intel.com>

	* Makefile.am:
	Enable gtk-doc in distcheck.

2008-10-27  Ross Burton  <ross@linux.intel.com>

	* libgssdp/gssdp-resource-browser.c:
	Don't use NULL return values from g_get_application_name() (#1177).

2008-09-27  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:

	Increase version number.

2008-09-27  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c (resource_available),
	(resource_free), (discovery_timeout), (start_discovery),
	(stop_discovery):
	* libgssdp/gssdp-resource-group.c (gssdp_resource_group_dispose),
	(gssdp_resource_group_set_available), (message_received_cb),
	(discovery_response_free):

	Use the specified GMainContext for timeouts.
