@@ -1,3 +1,11 @@
+2008-11-19  Jussi Kukkonen  <jku@linux.intel.com>
+
+	* libgssdp/gssdp-resource-group.c:
+
+	Send byebyes in dispose without sleep: DLNA message delay is
+	only mandatory for alive-messages after all. 
+	Make process_queue() static.
+
 2008-11-18  Jorn Baayen  <jorn.baayen@collabora.co.uk>
 
 	* configure.ac:
